--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@mikro-orm/sql-highlighter": "^1.0.1",
     "@nestjs/common": "^8.0.6",
     "@nestjs/core": "^8.0.6",
+    "@nestjs/schedule": "^1.0.1",
     "@nestjs/swagger": "^5.0.9",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
@@ -48,6 +49,7 @@
     "@nestjs/cli": "^8.1.1",
     "@nestjs/schematics": "^8.0.2",
     "@nestjs/testing": "^8.0.6",
+    "@types/cron": "^1.7.3",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
     "@types/node": "^14.11.2",
